fix icon size on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -1327,7 +1327,7 @@ div.post * {
     }
 
     .article-links > a > img, .article-links > a.fb > img  {
-        height: 5%;
+        height: 2em;
         text-align: center;
     }
 
